[gd_scene load_steps=6 format=3 uid="uid://bm8vr7nfbo4g8"]

[ext_resource type="Script" path="res://Scripts/Enemies/shadow_boss.gd" id="1_ccgou"]
[ext_resource type="Texture2D" uid="uid://ck3j0ma8jhiqp" path="res://images/cryptbossidle.webp" id="2_uceho"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8475x"]

[sub_resource type="SpriteFrames" id="SpriteFrames_heauu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_uceho")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_arxui"]
size = Vector2(65, 72)

[node name="ShadowBoss" type="CharacterBody2D"]
script = ExtResource("1_ccgou")
health = 100.0
base_speed = 20.0
damage = 100.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-7, 6.5)
scale = Vector2(13.52, 9.88)
shape = SubResource("CircleShape2D_8475x")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_heauu")

[node name="Detection" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Detection"]
polygon = PackedVector2Array(827, -844, -234, -1158, -1079, -935, -1419, -327, -1359, 500, -736, 1081, 96, 1022, 559, 806, 53, 85, 72, -70)

[node name="AttackArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(-1.5, -1)
shape = SubResource("RectangleShape2D_arxui")

[node name="AttackTimer" type="Timer" parent="."]

[connection signal="body_entered" from="Detection" to="." method="_on_detection_body_entered"]
[connection signal="body_exited" from="Detection" to="." method="_on_detection_body_exited"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
